Fix overflowing gallery and grid as well

--- a/components/work/work.module.scss
+++ b/components/work/work.module.scss
@@ -68,12 +68,15 @@
   grid-row: auto;
   grid-column: 1 / span calc(var(--columns) + 2);
   gap: var(--gap);
+  overflow: hidden;
   &:not(:last-child) { padding-bottom: var(--gap); }
   &:nth-of-type(1) { grid-row: 1 / span 2; }
 
   @include media(">tablet") {
     &:nth-of-type(1) { grid-row: 1; }
   }
+
+  @include media(">desktop") { overflow: visible; }
 }
 
 .datasheet {
@@ -150,8 +153,8 @@
   grid-row: 2;
   grid-column: 1 / span calc(var(--columns) + 2);
   align-self: stretch;
-  width: calc(100% - (var(--gap) * 2));
-  margin: 0 var(--gap);
+  width: 100%;
+  padding: 0 var(--gap);
   aspect-ratio: 1 / 1;
 
   > span {
@@ -175,9 +178,13 @@
 
   @include media(">tablet") {
     grid-row: 2;
-    grid-column: var(--content-start) / span calc((var(--content-width) * 3) - 1);
+    grid-column: var(--content-start) / span calc(var(--content-width) * 3);
     width: 100%;
-    margin: 0;
+    padding: 0;
+  }
+  
+  @include media(">900px") {
+    grid-column: var(--content-start) / span calc((var(--content-width) * 3) - 1);
   }
   
   @include media(">desktop") {
